# FestimPermeationFit

./: .gitignore  404.html  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
data/halpha/170112/: trace_p250_2_34313.csv  trace_p250_2_34314.csv  trace_p250_2_34315.csv  trace_p250_2_34316.csv  trace_p250_2_34317.csv  trace_p250_2_34318.csv  trace_p250_2_34319.csv  trace_p250_2_34320.csv
data/optimized/170112/: opt_PP8_34313_ku-4.6e-31.csv  opt_PP8_34313_ku-5.8e-30.csv  opt_PP8_34314_ku-2.2e-31.csv  opt_PP8_34314_ku-3.1e-30.csv  opt_PP8_34315_ku-1.3e-31.csv  opt_PP8_34318_ku-1e-30.csv  (+10 more)
docs/: festim.md  index.md  optimization.md  reference.md
example/optimize/: optimize_PP8_34313_ku_first.ipynb  optimize_PP8_34313_ku_second.ipynb  optimize_PP8_34314_ku_first.ipynb  optimize_PP8_34314_ku_second.ipynb  optimize_PP8_34315_ku_first.ipynb  optimize_PP8_34315_ku_second.ipynb  optimize_PP8_34316_ku_first.ipynb  optimize_PP8_34316_ku_second.ipynb  optimize_PP8_34317_ku_first.ipynb  optimize_PP8_34317_ku_second.ipynb  optimize_PP8_34318_ku_first.ipynb  optimize_PP8_34318_ku_second.ipynb  optimize_PP8_34319_ku_first.ipynb  optimize_PP8_34319_ku_second.ipynb  optimize_PP8_34320_ku_first.ipynb  optimize_PP8_34320_ku_second.ipynb
example/plot/: plot_34313.ipynb  plot_34314.ipynb  plot_34315.ipynb  plot_34316.ipynb  plot_34317.ipynb  plot_34318.ipynb  plot_34319.ipynb  plot_34320.ipynb
festim/: index.html
optimization/: index.html
search/: search_index.json
src/festim_permeation_fit/: optimize.py  piecewise.py
tests/: test_hello.py
