[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "festim-permeation-fit"
version = "0.1.0"
description = "Permeation flux fitting using FESTIM"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "K.Takahashi", email = "you@example.com" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "pandas>=2.2",
  "astropy>=6.0",
]

[project.optional-dependencies]
dev = []
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mkdocs-jupyter>=0.25",
]

[project.urls]
Homepage = "https://github.com/your/repo"
Repository = "https://github.com/your/repo"
Issues = "https://github.com/your/repo/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","B","UP","W","C90"]
lint.ignore = ["E203","E266","E501"]
src = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
